fix: Table Header Align Center

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -11,7 +11,7 @@
   background-color: transparent !important;
 }
 
-.v-data-table__td.v-data-table-column--align-center.v-data-table__th--sortable.v-data-table__th {
+.v-data-table-column--align-center.v-data-table__th--sortable div {
   position: relative;
   right: 11px;
 }
